Update search form in home page & fix style on mobile

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -3,6 +3,7 @@
 	&__title {
 		text-align: center;
 		font-size: 30px;
+		margin-bottom: 5px;
 	}
 	&__subTitle {
 		text-align: center;
