--- a/src/assets/styles/block/_footer.scss
+++ b/src/assets/styles/block/_footer.scss
@@ -4,6 +4,12 @@
     padding: 40px 0 20px;
 }
 
+.footer-logo,
+.footer-nav {
+	width: 25%;
+	padding: 0;
+}
+
 .footer-nav .nav-title {
 	color: #ccc;
 }
@@ -17,9 +23,9 @@
 }
 
 .footer-logo {
-	padding: 0 20px 0 0;
-	margin-top: 0;
+	margin-bottom: 20px;
 	img {
 		max-width: 100%;
+		width: 183px;
 	}
 }
